--- a/index.html
+++ b/index.html
@@ -8,8 +8,19 @@
 
 <body>
     <h1> Hospedagem Github</h1>
-    <p>Para criar ums site no github.com devemos ter uma conta válida e um repositório com um arquivo <strong>index.html</strong></p>
+        <p>Para criar ums site no github.com devemos ter uma conta válida e um repositório com um arquivo <strong>index.html</strong></p>
+            <h2>Hospedando um site</h2>
+                <ol>
+                    <li>Criar um repositório</li>
+                    <li>Publicar o repositório utilizando o <em>publish</em></li>
+                    <li>Abrir o repositório no VScode</li>
+                    <li>Criar o index.html</li>
+                    <li>Criar a versão utilizando o <em>commit</em></li>
+                    <li>Enviar para o repositório remoto utilizando o <em>push</em></li>
+                    <li>Entrar no github.com acessar, o repositório ->Settings->Pages->Escolher a branch do source</li>
+                    <li>Clicar na URL gerada</li>
 
+                </ol>
 
 
 </body>
