--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li>Criar o index.html</li>
                     <li>Criar a versão utilizando o <em>commit</em></li>
                     <li>Enviar para o repositório remoto utilizando o <em>push</em></li>
-                    <li>Entrar no github.com acessar, o repositório ->Settings->Pages->Escolher a branch do source</li>
+                    <li>Entrar no github.com, acessar o repositório ->Settings->Pages->Escolher a branch do source</li>
                     <li>Clicar na URL gerada</li>
 
                 </ol>
